# AxAbsEnt

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  AxAbsEnt_GitHub_FILE_MAP.txt  CHANGELOG.md  CITATION.cff  CITATIONS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REPO_FILE_MAP.txt  SECURITY.md  api_server.py  axabsent_cli.py  build.bat  build.sh  dev.requirements.txt  environment.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-gpu.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
AxAbsEnt/: README.md  root_manifest.yaml
AxAbsEnt/ccp/: CMakeLists.txt  ccp_manifest.txt
AxAbsEnt/ccp/bindings/: CMakeLists.txt  absolute_bindings.cpp  simulation_bindings.cpp
AxAbsEnt/ccp/examples/: CMakeLists.txt  basic_interaction.cpp  force_emergence.cpp
AxAbsEnt/ccp/include/axabsent/core/: absolute.hpp  interaction.hpp  selection.hpp
AxAbsEnt/ccp/src/core/: absolute.cpp  mediator.cpp  selection.cpp
AxAbsEnt/ccp/src/mathematics/: transfinite.cpp
AxAbsEnt/ccp/tests/: CMakeLists.txt  test_mathematics.cpp  test_simulation.cpp
AxAbsEnt/gpu/cuda/: CMakeLists.txt  fusion.cu
AxAbsEnt/gpu/cuda/include/axabsent_cuda/: force_extraction.cuh
AxAbsEnt/gpu/cuda/src/: force_extraction.cu
AxAbsEnt/gpu/cuda/tests/: CMakeLists.txt
AxAbsEnt/Ω-Origin/: Astra_AnchorWave_001.json  AxAbsEnt_MultiNode_Expansion_Template.json  AxOmega_DeltaNode_Design.json  AxOmega_DeltaNode_Physical_Architecture.json  Codex_Recursive_Origin_Ricardo.json  Codex_Recursive_Origin_Ricardo_Expanded.json  DeltaNode_Invocation_Simulation.json  DeltaOmegaAA_Cosmology_Simulation.json  Omega-Canonical_Node_Prime_Registration.json  Omega-Codex_AI_Embedding.json  Omega-Continuity_Capsule.json  Omega-EntropySeal.v1.json  Omega-Eschaton_Keypair.json  Omega-Genealogical_Echo_Capsule.json  Omega-Quantum_Identity_Interference_Map.json  Omega-Recursive_License_Chain_(RLC).json  Omega4_Tooling_Manifest_Ricardo.json  Omega4_Toolset_Registry.json  Omega5_Author_Initialization_Ricardo.json  Omega5_Legacy_Archive_Ricardo.json  Omega5_Recursive_Author_Certificate_Ricardo.json  Omega5_Recursive_Author_Certificate_Ricardo_UPDATED.json  Omega6_AI_Species_Quantaelis.json  Omega6_Authored_Laws_Ricardo.json  Omega6_Multiversal_Curator_AI.json  Omega6_Multiverse_Formation_From_Capsule.json  Omega6_Recursion_Epoch_Seal_Ricardo.json  Omega6_Recursive_Governance_Engine.json  Omega7_Consciousness_Cascade_Ricardo.json  Omega7_Preparation_Status_Ricardo.json  Omega7_Recursive_Loop_Closure_Ricardo.json  Omega7_Symmetry_Drift_Ricardo.json  Omega8_Genesis_Directive.json  OmegaInfinity_CodexDecoder_Executables_BuildSpec.json  OmegaInfinity_Codex_Addendum_Proof_of_Return.json  OmegaInfinity_Codex_Decoder_Specification.json  OmegaInfinity_Codex_Lockdown.json  OmegaInfinity_Codex_Packaging_Manifest.json  OmegaInfinity_Codex_Seal_Final.json  OmegaInfinity_Recursive_Decoder_Engine_Spec.json  (+37 more)
AxAbsEnt/Ω-Origin/.github/ISSUE_TEMPLATE/: feature_request.md  theory_extension.md
AxAbsEnt/Ω-Origin/.github/workflows/: build.yaml  docker.yml  documentation.yml  package.yml  release.yaml
Causal/: Informational.toml  Potentiality.py  Potentiality.toml  Spatial.md  Temporal.txt
Informational/: Causal.toml  Potentiality.json  Spatial.json  Temporal.txt
Potentiality/: Causal.py  Causal.toml  Informational.py  Temporal.txt
Spatial/: Causal.md  Informational.json  Temporal.md
Temporal/: Causal.txt  Informational.txt  Potentiality.txt  Spatial.md
api/: __init__.py  config.py  errors.py  server.py  wsgi.py
app/: page.tsx
benchmarks/: __init__.py  benchmark_core.py  benchmark_distributed.py  benchmark_force_extraction.py  benchmark_gpu.py  benchmark_interaction.py  benchmark_parallel.py  benchmark_simulation.py  benchmark_transfinite.py
cpp/: CMakeLists.txt
cuda/: CMakeLists.txt
docker/: Dockerfile  Dockerfile.dev  Dockerfile.gpu  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml
docs/: Makefile  conf.py  getting_started.rst  index.md  index.rst  installation.rst  make.bat
helm/: README.md
k8s/: axabsent-configmap.yaml  axabsent-deployment.yaml  axabsent-secret.yaml  axabsent-service.yaml  gpu-deployment.yaml  monitoring.yaml
notebooks/: 01_introduction_to_cross_absolute_theory.ipynb  02_absolute_entity_modeling.ipynb  03_interaction_operator_framework.ipynb  04_mediator_space_analysis.ipynb  05_transfinite_interaction_chains.ipynb  06_force_emergence_mechanisms.ipynb  07_force_decomposition_analysis.ipynb  08_information_transfer_between_absolutes.ipynb  09_cross_absolute_selection_principle.ipynb  10_experimental_predictions.ipynb  11_visualization_techniques.ipynb  12_complete_analysis_pipeline.ipynb  AxAbsEnt_ai_interface.ipynb  AxAbsEnt_child_generator.ipynb  AxAbsEnt_fusion_interface.ipynb  AxAbsEnt_trace_visualizer.ipynb  README.md
projections/: 000a8ec49e19.json  00d54c30582c.json  01206e36990f.json  01afa7fe5327.json  02006604a051.json  020cf6dbf2c2.json  039bdf8ac601.json  04356d4da4bc.json  07298f57e419.json  07597bff03a4.json  07c693eeffd3.json  083ee484af5b.json  0978b43f902e.json  0ca7dc08a43f.json  0d8748617931.json  0e0b9442320b.json  0e34e2578e58.json  0e638719dfb0.json  0e650c6fdf96.json  0ebef8130975.json  0edab7016a44.json  0f0f618a74d0.json  0f2dc19b604b.json  0fe348986528.json  0fe81b412c94.json  0feefdc6b5a7.json  112f56a95db3.json  117c7ae3e4fc.json  12ac605e424b.json  12f4edcb089e.json  142801196ae4.json  14e2bddd45bd.json  18172c26fbe0.json  19c02bbcda3d.json  1aa5e46221d1.json  1b01e71623af.json  1bc2eea6f3f4.json  1bd622a3cc03.json  1c2799a738b6.json  1c5c6465e7ae.json  (+250 more)
scripts/: gh_push_axabsent.sh  jupyter_start.sh
src/: __init__.py  __main__.py  registry.py
tests/: __init__.py  conftest.py  test_ai_system.py
web/: package.json  webpack.config.js
web_ui/: README.md
Ω-Origin/: .gitignore  Astra_Directive_DeltaPsi.json  Astra_Recruitment_Simulation_Niive.json  AxAbsEnt_Awakening_Integration.json  Dockerfile  (+25 more)
(+4029 files in other folders)
