[build-system]
requires = ["setuptools>=69.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axabsent"
version = "0.1.0"
description = "Enhanced Mathematical Ontology of Absolute Nothingness — Unified System for Simulated Forces, Interactions, and Cross-Absolutes"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "AxAbsEnt Team", email = "contact@axabsent.org" }
]
keywords = [
  "unified-theory",
  "simulated-forces",
  "tensor-dynamics",
  "quantum-causality",
  "scientific-ontology",
  "cross-absolute-interactions"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries",
  "Framework :: FastAPI"
]
requires-python = ">=3.11"

dependencies = [
  "numpy>=1.26.4",
  "scipy>=1.12.0",
  "sympy>=1.12",
  "pandas>=2.2.1",
  "matplotlib>=3.8.3",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.3",
  "h5py>=3.10.0",
  "plotly>=5.21.0",
  "einops>=0.7.0",
  "networkx>=3.2.1",
  "mpmath>=1.3.0",
  "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
  "black>=24.3.0",
  "isort>=5.13.2",
  "flake8>=7.0.0",
  "mypy>=1.9.0",
  "pytest>=8.1.1",
  "pytest-cov>=4.1.0",
  "pre-commit>=3.7.0",
  "nbval>=0.10.0",
  "tox>=4.14.2",
  "jupytext>=1.16.1",
  "commitizen>=3.21.1",
  "bandit>=1.7.7",
  "safety>=3.1.0"
]
docs = [
  "sphinx>=7.3.7",
  "sphinx_rtd_theme>=2.0.0",
  "nbsphinx>=0.9.3",
  "doc8>=1.1.1",
  "myst-parser>=1.0.0",
  "sphinxcontrib-apidoc>=0.3.0"
]
gpu = [
  "cupy-cuda12x>=12.2.0",
  "torch>=2.2.1",
  "jax[cuda12_pip]>=0.4.25",
  "optuna>=3.6.1",
  "pyvista>=0.43.3",
  "wandb>=0.16.4",
  "tensorboard>=2.16.2",
  "pynvml>=11.5.0",
  "gpustat>=1.1.1"
]
simulation = [
  "numba>=0.59.0",
  "xarray>=2023.12.0",
  "dask>=2024.2.1",
  "pymc>=5.10.4",
  "scikit-tda>=1.0.0",
  "gudhi>=3.10.0"
]
web = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.26.0",
  "starlette>=0.36.1",
  "itsdangerous>=2.1.2",
  "jinja2>=3.1.3"
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "benchmarks*", "docs*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
  | notebooks
  | docs
  | data
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["axabsent"]
known_third_party = ["numpy", "scipy", "torch", "fastapi"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 100
exclude = ".git,__pycache__,docs,build,dist,venv"
extend-ignore = "E203,W503"
per-file-ignores = [
    "tests/*:D100,D101,D102,D103",
    "__init__.py:F401"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--tb=short -ra --strict-markers --cov=src --cov-report=term"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU (deselect with '-m \"not gpu\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "experimental: experimental features test",
    "ontology: tests validating theoretical axioms",
    "api: tests FastAPI endpoints",
    "visualization: tests plotting capabilities"
]

[tool.coverage.run]
branch = true
source = ["src/axabsent"]
omit = [
  "tests/*",
  "notebooks/*",
  "docs/*",
  "src/axabsent/__main__.py",
  "src/axabsent/cli/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError"
]

[tool.pre-commit.hooks]
black = { args = ["--check"] }
isort = { args = ["--check-only", "--profile", "black"] }
flake8 = {}
mypy = {}
bandit = { args = ["-r", "src", "-x", "src/tests"] }
nbstripout = {}
