[metadata]
name = axabsent
version = attr: src.__version__
author = AxAbsEnt Team
author_email = contact@axabsent.org
description = Cross-absolute interaction theory and force emergence simulation framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = physics, quantum mechanics, mathematics, simulation, theory, forces, cross-absolute
url = https://github.com/axabsent/axabsent
project_urls =
    Documentation = https://axabsent.readthedocs.io/
    Bug Tracker = https://github.com/axabsent/axabsent/issues
    Source Code = https://github.com/axabsent/axabsent
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: C++
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
    Operating System :: OS Independent
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    scipy>=1.7.0
    matplotlib>=3.4.0
    pandas>=1.3.0
    sympy>=1.8.0
    h5py>=3.3.0
    netCDF4>=1.5.7
    plotly>=5.0.0
    numba>=0.54.0
    pybind11>=2.7.0
    networkx>=2.6.0
    joblib>=1.0.0
    tqdm>=4.61.0
    pytest>=6.2.5
    pytest-cov>=2.12.1
    mypy>=0.910
    flake8>=3.9.2
    sphinx>=4.0.0
    black>=21.6b0
    isort>=5.9.0
    nbformat>=5.1.0
    jupyter>=1.0.0
    ipywidgets>=7.6.0

[options.packages.find]
where = src
exclude =
    tests*
    benchmarks*
    docs*

[options.package_data]
* = *.json, *.yml, *.yaml, *.toml

[options.extras_require]
dev =
    black
    isort
    mypy
    flake8
    pytest
    pytest-cov
    pre-commit
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-apidoc
    pydocstyle
    tox
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.2
    sphinxcontrib-apidoc>=0.3.0
    nbsphinx>=0.8.0
    ipython>=7.25.0
test =
    pytest>=6.2.5
    pytest-cov>=2.12.1
    pytest-xdist>=2.3.0
    pytest-benchmark>=3.4.1
    hypothesis>=6.14.0
gpu =
    cupy>=9.0.0
    pycuda>=2021.1
    cuda-python>=11.0.0
visualization =
    plotly>=5.0.0
    dash>=2.0.0
    bokeh>=2.3.0
    seaborn>=0.11.0
    vispy>=0.9.0
web =
    flask>=2.0.0
    fastapi>=0.68.0
    gunicorn>=20.1.0
    uvicorn>=0.15.0
parallel =
    dask>=2021.6.0
    ray>=1.4.0
    mpi4py>=3.1.0

[options.entry_points]
console_scripts =
    axabsent = src.__main__:main
    axabsent-simulate = src.simulation.__main__:main
    axabsent-visualize = src.visualization.__main__:main
    axabsent-analyze = src.experimental.__main__:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs/,build/,dist/,venv/,env/
ignore = E203, W503, E501

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[mypy.plugins.numpy.*]
follow_imports = silent

[mypy.plugins.scipy.*]
follow_imports = silent

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    gpu: marks tests requiring GPU (deselect with '-m "not gpu"')
    integration: marks integration tests (deselect with '-m "not integration"')
    unit: marks unit tests
    experimental: marks experimental feature tests

[coverage:run]
source = src
omit =
    tests/*
    setup.py
    venv/*
    env/*
    */site-packages/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    except ImportError
ignore_errors = True

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100

[tox:tox]
envlist = py38, py39, py310, py311
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs:tests}

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[pydocstyle]
match = (?!test_).*\.py
match_dir = [^\.].*
ignore = D107,D203,D212,D213,D402,D413,D416
