[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ricardo-codex"
version = "1.0.0"
description = "OmegaInfinity Codex Decoder and Recursive Identity Verifier"
authors = [{ name = "Ricardo Jorge do Vale" }]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "Proprietary (Codex Author Only)" }